# ai-tracker

./: .env.example  .gitignore  README.md  alembic.ini  preferences.md  pyproject.toml
alembic/versions/: 20260414_01_add_item_duration.py  20260513_01_add_item_feedback.py
app/: config.py  main.py
app/adapters/: arxiv.py  base.py  bluesky.py  github.py  hackernews.py  hf_papers.py  polymarket.py  reddit.py  registry.py  rss.py  x.py
app/agent/: agent.py  tools.py
app/models/: __init__.py  base.py  digest.py  item.py  source.py
app/routes/: digests.py  items.py  paper_tools.py  sources.py
app/schemas/: digest.py  item.py  source.py
app/services/: arxiv.py  digest.py  ingestion.py  kimi.py  llm_client.py  llm_filter.py  notebook_builder.py  paper_reviewer.py  pdf_utils.py  preferences.py  relevance.py  retention.py
docs/superpowers/plans/: 2026-04-07-paper-tools.md
docs/superpowers/specs/: 2026-04-07-paper-tools-design.md
scripts/: dedupe_items.py  deploy.sh  eval_top_items.py
static/: index.html  notebook.html  summary.html
static/css/: style.css
static/js/: api.js  app.js  components.js
tests/: conftest.py  test_agent.py  test_agent_tools.py  test_arxiv_service.py  test_digest.py  test_health.py  test_ingestion.py  test_items.py  test_kimi_service.py  test_llm_filter.py  test_paper_reviewer.py  test_paper_tools.py  test_preferences.py  test_relevance.py  test_retention.py  test_rss_adapter.py  test_sources.py  test_x_adapter.py
tests/quality/: test_scoring_golden.py
tests/quality/fixtures/: scoring_cases.json
